avoiding scrollbar

--- a/demos/assets/docs.css
+++ b/demos/assets/docs.css
@@ -60,7 +60,7 @@ section {
 nav {
     position: absolute;
     top: 0;
-    width: 100%;
+    width: 99%;
     background: #eee;
     border-bottom: 1px solid #ccc;
     padding-bottom: 1em;
